# advent-of-code

2024/: CMakeLists.txt
2024/day06/: CMakeLists.txt  day06p1.cpp
